# hackerrank-solutions

./: Cargo.toml  README.md
algorithms/00_solve_me_first/: main.rs
algorithms/00_warmup/00_solve_me_first/: README.md  main.rs
algorithms/00_warmup/01_simple_array_sum/: main.rs
algorithms/00_warmup/02_compare_the_triplets/: main.rs
algorithms/00_warmup/03_a_very_big_sum/: main.rs
algorithms/00_warmup/03_diagonal_difference/: main.rs
algorithms/00_warmup/04_diagonal_difference/: main.rs
algorithms/00_warmup/04_plus_minus/: main.rs
algorithms/00_warmup/05_plus_minus/: main.rs
algorithms/00_warmup/05_staircase/: main.rs
algorithms/00_warmup/06_mini-max_sum/: main.rs
algorithms/00_warmup/06_staircase/: main.rs
algorithms/00_warmup/07_birthday_cake_candles/: main.rs
algorithms/00_warmup/07_mini-max_sum/: main.rs
algorithms/00_warmup/08_birthday_cake_candles/: main.rs
algorithms/00_warmup/09_time_conversion/: main.rs
algorithms/01_implementations/00_grading_students/: main.rs
algorithms/01_implementations/01_apples_and_oranges/: main.rs
algorithms/01_implementations/02_number_line_jumps/: main.rs
algorithms/01_implementations/03_between_two_sets/: main.rs
algorithms/01_implementations/04_subarray_division/: main.rs
algorithms/01_implementations/05_divisible_sum_pairs/: main.rs
algorithms/01_implementations/06_migratory_birds/: main.rs
algorithms/01_implementations/07_day_of_the_programmer/: main.rs
algorithms/01_implementations/08_bill_division/: main.rs
algorithms/01_implementations/09_sales_by_match/: main.rs
algorithms/01_implementations/10_drawing_book/: main.rs
algorithms/01_implementations/11_counting_valleys/: main.rs
algorithms/01_implementations/14_forming_a_magic_square/: main.rs
algorithms/01_implementations/15_picking_numbers/: main.rs
