bin = [
    { name = "solve_me_first", path = "algorithms/00_warmup/00_solve_me_first/main.rs"},
    { name = "simple_array_sum", path = "algorithms/00_warmup/01_simple_array_sum/main.rs"},
    { name = "compare_the_triplets", path = "algorithms/00_warmup/02_compare_the_triplets/main.rs"},
    { name = "diagonal_difference", path = "algorithms/00_warmup/03_diagonal_difference/main.rs"},
    { name = "plus_minus", path = "algorithms/00_warmup/04_plus_minus/main.rs"},
    { name = "staircase", path = "algorithms/00_warmup/05_staircase/main.rs"},
]

[package]
name = "algorithms"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
