bin = [
    { name = "solve_me_first", path = "algorithms/00_warmup/00_solve_me_first/main.rs" },
    { name = "simple_array_sum", path = "algorithms/00_warmup/01_simple_array_sum/main.rs" },
    { name = "compare_the_triplets", path = "algorithms/00_warmup/02_compare_the_triplets/main.rs" },
    { name = "a_very_big_sum", path = "algorithms/00_warmup/03_a_very_big_sum/main.rs" },
    { name = "diagonal_difference", path = "algorithms/00_warmup/04_diagonal_difference/main.rs" },
    { name = "plus_minus", path = "algorithms/00_warmup/05_plus_minus/main.rs" },
    { name = "staircase", path = "algorithms/00_warmup/06_staircase/main.rs" },
    { name = "mini-max_sum", path = "algorithms/00_warmup/07_mini-max_sum/main.rs" },
    { name = "birthday_cake_candles", path = "algorithms/00_warmup/08_birthday_cake_candles/main.rs" },
    { name = "time_conversion", path = "algorithms/00_warmup/09_time_conversion/main.rs" },
    { name = "grading_students", path = "algorithms/01_implementations/00_grading_students/main.rs" },
    { name = "apples_and_oranges", path = "algorithms/01_implementations/01_apples_and_oranges/main.rs" },
]

[package]
name = "algorithms"

version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
